[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/town/PromoteUI.gd" id="1"]

[node name="PromoteUI" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -260.0
offset_right = 380.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Class Promotion"

[node name="JPInfoLabel" type="Label" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
horizontal_alignment = 2

[node name="Content" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="MemberScroll" type="ScrollContainer" parent="Panel/MarginContainer/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
horizontal_scroll_mode = 0

[node name="MemberList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/MemberScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="DetailScroll" type="ScrollContainer" parent="Panel/MarginContainer/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
horizontal_scroll_mode = 0

[node name="DetailPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/DetailScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 14
text = "Close"
